grid cells no longer used to compute closest station. iteration will be better for U.S.-wide data. GPS data integration improved on physical device.

--- a/device/firmware/Makefile
+++ b/device/firmware/Makefile
@@ -1,5 +1,5 @@
 PRG            = dat_lcd
-OBJ            = fmFirmware.o display.o
+OBJ            = fmFirmware.o display.o parse.o
 PROGRAMMER     = avrispmkII
 PORT           = usb
 MCU_TARGET     = atmega1284p
