--- a/device/firmware/Makefile
+++ b/device/firmware/Makefile
@@ -1,5 +1,5 @@
 PRG            = dat_lcd
-OBJ            = fmFirmware.o lcd.o gps.o eeprom.o
+OBJ            = fmFirmware.o lcd.o geolocation.o eeprom.o
 PROGRAMMER     = avrispmkII
 PORT           = usb
 MCU_TARGET     = atmega1284p
